--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     place-content: center;
     height: 100px;
-    width: 99vw;
+    width: 100%;
     top: 0;
     margin: 0;
     padding: 0;
@@ -34,4 +34,12 @@ li {
     font-size: 1.1rem;
     cursor: pointer;
 
+}
+
+@media (max-width: 415px) {
+    .header-container {
+        justify-content: center;
+        place-content: center;
+        align-items: center;
+    }
 }
